--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,16 @@
-<h1>Welcome to the home page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="static\index.csss">
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to the Student Exam Performance Predictor</h1>
+        <button class="btn" onclick="window.location.href='home.html'">Predict Marks</button>
+    </div>
+</body>
+</html>
