--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Exam Performance Indicator</title>
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="static\home.css">
+    <link rel="stylesheet" href="static\styles.css">
 
 </head>
 <body>
