--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="static\index.csss">
+    <link rel="stylesheet" href="static\styles.csss">
 </head>
 <body>
     <div class="container">
