--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>© 2025 Student Exam Performance Predictor. All rights reserved.</p>
+        <p>© 2025 Vishal Singh. All rights reserved.</p>
     </footer>
 </body>
 </html>
